--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -450,7 +450,7 @@ hr { margin-top: 20px; margin-bottom: 20px; border: 0; border-top: 1px solid #ee
 body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure { margin: 0; padding: 0; }
 
 /** Basic styling */
-body { font: 400 16px/1.5 "latolight", Helvetica, Arial, sans-serif; color: #111; background-color: #fdfdfd; -webkit-text-size-adjust: 100%; -webkit-font-feature-settings: "kern" 1; -moz-font-feature-settings: "kern" 1; -o-font-feature-settings: "kern" 1; font-feature-settings: "kern" 1; font-kerning: normal; }
+body { font: 400 16px/1.5 "latolight", Helvetica, Arial, sans-serif; color: #111; background-color: #fff; -webkit-text-size-adjust: 100%; -webkit-font-feature-settings: "kern" 1; -moz-font-feature-settings: "kern" 1; -o-font-feature-settings: "kern" 1; font-feature-settings: "kern" 1; font-kerning: normal; }
 
 /** Set `margin-bottom` to maintain vertical rhythm */
 h1, h2, h3, h4, h5, h6, p, blockquote, pre, ul, ol, dl, figure, .highlight { margin-bottom: 15px; }
@@ -489,24 +489,26 @@ pre { padding: 8px 12px; overflow-x: auto; }
 pre > code { border: 0; padding-right: 0; padding-left: 0; }
 
 /** Wrapper */
-.wrapper { max-width: -webkit-calc(800px - (30px * 2)); max-width: calc(800px - (30px * 2)); margin-right: auto; margin-left: auto; padding-right: 30px; padding-left: 30px; }
-@media screen and (max-width: 800px) { .wrapper { max-width: -webkit-calc(800px - (30px)); max-width: calc(800px - (30px)); padding-right: 15px; padding-left: 15px; } }
-
+/*.wrapper { max-width: -webkit-calc(800px - (30px * 2)); max-width:         calc(800px - (30px * 2)); margin-right: auto; margin-left: auto; padding-right: $spacing-unit; padding-left: $spacing-unit; @extend %clearfix;
+ @include media-query($on-laptop) { max-width: -webkit-calc(800px - (30px)); max-width:         calc(800px - (30px)); padding-right: $spacing-unit / 2; padding-left: $spacing-unit / 2; }
+}*/
 /** Clearfix */
-.wrapper:after { content: ""; display: table; clear: both; }
-
 /** Icons */
 .icon > svg { display: inline-block; width: 16px; height: 16px; vertical-align: middle; }
 .icon > svg path { fill: #1B1E1F; }
 
 /** Fonts on persistent elements **/
-h2, .contentnav li a, h5, .filter-group li, h6 { font-family: "gentium_basicbold", Arial, sans-serif; }
+h2, .contentnav li a, h5, .filter-group li, h6, .mobilemenu li a { font-family: "gentium_basicbold", Arial, sans-serif; }
 
-h1, .index h5, .download h6, .post-header h3 { font-family: "alegreyabold", Times, serif; }
+h1, .index h5, .post-header h3 { font-family: "alegreyabold", Times, serif; }
 
 .wrapperhead li a { font-family: "montserratregular", Times, serif; }
 
 p strong, .chnum { font-family: "trattatelloregular", Times, serif; }
+
+/** Lists
+**/
+ul { list-style: url("../img/curls-list-2.png"); }
 
 /** Site header */
 .site-header { background-color: #1B1E1F; position: relative; }
@@ -633,12 +635,12 @@ p strong, .chnum { font-family: "trattatelloregular", Times, serif; }
   #heading .cerchez-slider .slider .item .caption span.text { font-size: 1.5em; } }
 /** Side menu
 */
-#sidemenu .title img { width: 220px; }
-#sidemenu .index { margin: 20px 40px 20px 0; padding: 20px 5px; border: 1px solid #cd1619; text-align: center; /*@include media-query($on-laptop) { width: 40%; float: left;
+#sidemenu .title { width: 220px; }
+#sidemenu .index { width: 220px; margin: 20px 40px 20px -5px; padding: 20px 5px; border: 1px solid #cd1619; text-align: center; /*@include media-query($on-laptop) { width: 40%; float: left;
 }*/ }
 #sidemenu .index a:hover { text-decoration: none; }
 #sidemenu .index h5 { color: #cd1619; margin: 0; font-size: 25px; }
-#sidemenu .download { margin: 20px 40px 20px 0; padding: 10px 5px; border: 1px solid #cd1619; text-align: center; /*@include media-query($on-laptop) { width: 40%; float: left; h6{ font-size: 25px; }
+#sidemenu .download { width: 220px; margin: 20px 40px 20px -5px; padding: 10px 5px; border: 1px solid #cd1619; text-align: center; /*@include media-query($on-laptop) { width: 40%; float: left; h6{ font-size: 25px; }
 }*/ }
 #sidemenu .download h6 { color: #cd1619; text-transform: uppercase; margin: 0; font-size: 20px; }
 #sidemenu .download a:hover { text-decoration: none; }
@@ -649,6 +651,9 @@ p strong, .chnum { font-family: "trattatelloregular", Times, serif; }
 #sidemenu .contentnav ul li a:hover { text-decoration: none; }
 #sidemenu .curls { float: right; margin: 0; }
 #sidemenu .curls img { max-width: 87px; }
+@media screen and (max-width: 600px) { #sidemenu .title { padding: 0 0 30px 0; }
+  #sidemenu .title, #sidemenu .download, #sidemenu .index { margin: 20px auto; }
+  #sidemenu .contentnav, #sidemenu .curls { display: none; } }
 
 /** Site footer */
 .site-footer { padding: 30px 0; border-top: 20px solid black; }
@@ -666,22 +671,30 @@ p strong, .chnum { font-family: "trattatelloregular", Times, serif; }
 .post-link { display: block; font-size: 24px; }
 
 /** Posts */
-.post-header { margin-bottom: 30px; }
-.post-header h3 { color: #cd1619; text-transform: uppercase; font-size: 40px; text-align: center; }
-
-.post-title { font-size: 80px; letter-spacing: -1px; line-height: 1; color: #cd1619; text-align: center; text-transform: uppercase; }
-@media screen and (max-width: 800px) { .post-title { font-size: 40px; } }
-
-.post-content { margin-bottom: 30px; }
-.post-content h2 { font-size: 32px; color: #cd1619; font-variant: small-caps; }
-@media screen and (max-width: 800px) { .post-content h2 { font-size: 28px; } }
-.post-content h3 { font-size: 26px; }
-@media screen and (max-width: 800px) { .post-content h3 { font-size: 22px; } }
-.post-content h4 { font-size: 20px; }
-@media screen and (max-width: 800px) { .post-content h4 { font-size: 18px; } }
-.post-content p strong { color: #cd1619; }
-.post-content p a, .post-content li a { color: #cd1619; text-decoration: none; }
-.post-content p a:hover, .post-content li a:hover { text-decoration: none; }
+.post .post-header { margin-bottom: 30px; }
+.post .post-header h3 { color: #cd1619; text-transform: uppercase; font-size: 35px; text-align: center; }
+.post .post-header .curlholder { width: 300px; margin: 0 auto; }
+.post .post-header .chnum { color: #cd1619; position: absolute; top: 25px; left: 330px; font-size: 50px; }
+.post .post-title { font-size: 130px; margin-bottom: 0; letter-spacing: -1px; line-height: 1; color: #cd1619; text-align: center; text-transform: uppercase; }
+.post .post-content { margin-bottom: 30px; }
+.post .post-content h2 { font-size: 32px; color: #cd1619; font-variant: small-caps; }
+@media screen and (max-width: 800px) { .post .post-content h2 { font-size: 28px; } }
+.post .post-content h3 { font-size: 26px; }
+@media screen and (max-width: 800px) { .post .post-content h3 { font-size: 22px; } }
+.post .post-content h4 { font-size: 20px; }
+@media screen and (max-width: 800px) { .post .post-content h4 { font-size: 18px; } }
+.post .post-content p strong { color: #cd1619; }
+.post .post-content p a, .post .post-content li a { color: #cd1619; text-decoration: none; }
+.post .post-content p a:hover, .post .post-content li a:hover { text-decoration: none; }
+.post .mobilemenu { display: none; width: 300px; margin: 0 auto; }
+.post .mobilemenu ul { border: 1px solid #cd1619; margin: 10px 0; padding: 10px 0 10px 30px; }
+.post .mobilemenu ul li { font-variant: small-caps; }
+.post .mobilemenu ul li a { color: #cd1619; font-size: 20px; }
+.post .mobilemenu ul li a:hover { text-decoration: none; color: #cd1619; }
+@media screen and (max-width: 600px) { .post .curlholder { padding: 20px 0 0 0; }
+  .post .mobilemenu { display: block; }
+  .post .post-title { font-size: 40px; padding: 20px 0; }
+  .post .post-header h3 { font-size: 25px; padding: 10px 0; } }
 
 /** Browse Chapters at bottom of posts
 **/
