--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -463,7 +463,7 @@ img { max-width: 100%; vertical-align: middle; }
 /** Figures */
 figure > img { display: block; }
 
-figcaption { font-size: 16.1875px; }
+figcaption { font-size: 14px; }
 
 /** Lists */
 ul, ol { margin-left: 30px; }
@@ -513,43 +513,40 @@ p strong, .chnum { font-family: "trattatelloregular", Georgia, Times, serif; }
 ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
 
 /** Site header */
-.site-header { background-color: #1B1E1F; position: relative; }
-.site-header .container { width: 960px; margin: 0 auto; }
-.site-header #logo { padding-left: 10px; padding-right: 10px; display: table-cell; vertical-align: middle; height: 4em; padding: 1em; position: relative; }
+.site-header { background-color: #1B1E1F; color: #fff; position: relative; z-index: 3; display: block; }
+.site-header .icon-arrow-down:before { content: "\e005"; }
+.site-header [class*="icon-"] { font-family: 'ThemeIcons'; speak: none; font-style: normal; font-variant: normal; text-transform: none; line-height: 1; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
+.site-header #menuswitch { display: none; }
+.site-header .container { width: 960px; margin: 0 auto; padding: 0; }
+.site-header #logo { padding: 0.86em; display: table-cell; vertical-align: middle; height: 4em; padding: 0.86em 10px; position: relative; }
+.site-header #logo h1 { margin-bottom: 0; }
 .site-header #logo h1 a { display: inline-block; }
-.site-header #logo h1 a img { max-height: 3em; }
+.site-header #logo h1 a img { height: 80px; }
 .site-header #menu { text-align: right; padding-right: 10px; }
-.site-header #menu li { display: inline-block; }
-.site-header #menu li a { padding: 0.75em 1.5 em; color: #fff; text-decoration: none; -webkit-transition: all 0.2s ease; -moz-transition: all 0.2s ease; -ms-transition: all 0.2s ease; -o-transition: all 0.2s ease; transition: all 0.2s ease; }
+.site-header #menu ul { display: block; -webkit-margin-before: 0.86em; -webkit-margin-after: 0.86em; -webkit-margin-start: 0px; -webkit-margin-end: 0px; -webkit-padding-start: 85px; }
+.site-header #menu ul li { display: inline-block; }
+.site-header #menu ul li a { font-size: 0.86em; color: #fff; text-decoration: none; text-transform: uppercase; padding: 0.75em 1.5 em; -webkit-transition: all 0.2s ease; -moz-transition: all 0.2s ease; -ms-transition: all 0.2s ease; -o-transition: all 0.2s ease; transition: all 0.2s ease; }
+@media (max-width: 1010px) { .site-header .container { width: 720px; }
+  .site-header .container img { max-width: inherit; }
+  .site-header .container #menu ul li a { font-size: 14px; } }
+@media (max-width: 753px) { .site-header .container { width: 100%; }
+  .site-header #menu { display: none; }
+  .site-header #logo { display: table; width: 100%; } }
+@media screen and (max-width: 600px) { .site-header #logo img { width: 240px; } }
 
 /* header */
-#header { background-color: #1B1E1F; color: #fff; position: relative; z-index: 3; display: block; }
-
-#header #logo { padding: 1em; position: relative; }
-
+/*
 #header #logo h1 { margin-bottom: 0; margin-right: 1.25em; }
-
 #header #logo h1 a { display: inline-block; color: #fff; text-decoration: none; }
-
 #header #logo h1 a img { max-height: 3em; }
-
 #header #menu { display: none; }
 
-#header #menu ul { list-style: none; }
-
-#header #menu ul, #header #menu li { margin: 0; }
-
-#header #menu li a { padding: 1em 1em; color: #fff; text-decoration: none; }
-
-#header #menu ul li.current_page_item > a { color: #2ba8bd; }
-
-#header #menu .mini-menu-cart strong { font-weight: 400; }
-
+*/
 #header #menu.mobile { display: block; }
 
-#header #menu.mobile li { border-top: 1px solid #333; }
+#header #menu.mobile li { border-top: 1px solid #333; display: block; }
 
-#header #menu.mobile li a { display: block; font-size: 1.2em; }
+#header #menu.mobile li a { display: block; font-size: 0.86em; padding: 0.86em; }
 
 #header #menu.mobile li li a { padding-left: 2em; }
 
@@ -561,41 +558,40 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
 
 #header #menu.mobile .mini-menu-cart ul { display: none; }
 
-#header #menu .menu-item-language img.iclflag { position: relative; top: -0.1em; }
+#header #menu.mobile ul { list-style: none; display: block; -webkit-padding-start: 0; -webkit-padding-start: 0; text-align: left; }
 
-#header #menu-switch { position: absolute; top: 50%; right: 0; width: 5em; height: 6em; margin-top: -3em; cursor: pointer; text-align: center; display: table; }
+#header #menu.mobile ul, #header #menu li { margin: 0; }
 
-#header #menu-switch:before { text-align: center; font-size: 1.5em; display: table-cell; vertical-align: middle; }
+#header #menu.mobile ul li.current_page_item > a { color: #2ba8bd; }
 
-#header #menu-switch:before { text-align: center; font-size: 1.5em; display: table-cell; vertical-align: middle; -webkit-transition: transform 0.3s ease; -moz-transition: transform 0.3s ease; -ms-transition: transform 0.3s ease; -o-transition: transform 0.3s ease; transition: transform 0.3s ease; }
+#header #menu.mobile .mini-menu-cart strong { font-weight: 400; }
 
-#header #menu-switch.on:before { -webkit-transform: rotate(180deg); -moz-transform: rotate(180deg); -ms-transform: rotate(180deg); -o-transform: rotate(180deg); transform: rotate(180deg); }
+#header #menuswitch { position: absolute; top: 50%; right: 0; width: 5em; height: 6em; margin-top: -3em; cursor: pointer; text-align: center; display: table; }
 
+#header #menuswitch:before { text-align: center; font-size: 1.29em; display: table-cell; vertical-align: middle; }
+
+#header #menuswitch:before { text-align: center; font-size: 1.29em; display: table-cell; vertical-align: middle; -webkit-transition: transform 0.3s ease; -moz-transition: transform 0.3s ease; -ms-transition: transform 0.3s ease; -o-transition: transform 0.3s ease; transition: transform 0.3s ease; }
+
+#header #menuswitch.on:before { top: 15%; -webkit-transform: rotate(180deg); -moz-transform: rotate(180deg); -ms-transform: rotate(180deg); -o-transform: rotate(180deg); transform: rotate(180deg); }
+
+/*
 #heading { position: relative; z-index: 2; }
-
 #heading .bar, .thumb .bar { position: absolute; left: 0; bottom: -1px; width: 100%; height: 0.5em; z-index: 98; }
-
-#heading .bar:before, #heading .bar:after, .thumb .bar:before, .thumb .bar:after { content: ''; position: absolute; top: 0; width: 50%; height: 0; border-bottom: 0.5em solid #fff; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; box-sizing: border-box; }
-
-#heading .bar:before, .thumb .bar:before { left: 0; border-right: 0.5em solid transparent; }
-
-#heading .bar:after, .thumb .bar:after { right: 0; border-left: 0.5em solid transparent; }
-
+#heading .bar:before, #heading .bar:after, .thumb .bar:before, .thumb .bar:after { content:''; position: absolute; top: 0; width: 50%; height: 0; border-bottom: 0.5em solid #fff; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; box-sizing: border-box; }
+#heading .bar:before, .thumb .bar:before { left: 0; border-right: 0.5em solid rgba(0, 0, 0, 0); }
+#heading .bar:after, .thumb .bar:after { right: 0; border-left: 0.5em solid rgba(0, 0, 0, 0); }
 .thumb .bar:before, .thumb .bar:after { border-bottom-color: #f4f4f4; }
-
 .invert-colors .thumb .bar:before, .invert-colors .thumb .bar:after, .thumb .bar.white:before, .thumb .bar.white:after { border-bottom-color: #fff; }
 
-#header.current a { color: #ff0200; }
-
-#header li a { text-transform: uppercase; }
-
+*/
 @media (min-width: 768px) { #header .wrapper { display: table; width: 100%; }
-  #header #logo, #header #menu { display: table-cell; vertical-align: middle; height: 4em; }
+  #header #logo, #header #menu { display: table-cell; vertical-align: middle; height: 3.45em; }
   #header #logo { padding-left: 10px; padding-right: 10px; }
   #header #logo h1 { margin-right: 0; }
   #header #menu { text-align: right; padding-right: 10px; -ms-touch-action: none; }
   #header #menu li { display: inline-block; }
   #header #menu li a { display: inline-block; padding: 0.5em 1em; -webkit-transition: all 0.2s ease; -moz-transition: all 0.2s ease; -ms-transition: all 0.2s ease; -o-transition: all 0.2s ease; transition: all 0.2s ease; }
+  #header #menu li a:hover { background-color: #090909; }
   .no-touch #header #menu li a:hover { background-color: #090909; }
   #header #menu li.menu-item-has-children, #header #menu li.page_item_has_children, #header #menu li.menu-item-language, #header #menu li.mini-menu-cart { position: relative; }
   #header #menu li.menu-item-has-children ul, #header #menu li.page_item_has_children ul, #header #menu li.menu-item-language ul.submenu-languages, #header #menu li.mini-menu-cart ul { visibility: hidden; position: absolute; top: 100%; left: 0; z-index: 99; width: 12em; text-align: left; background-color: #090909; opacity: 0; -webkit-transition: all 0.2s ease; -moz-transition: all 0.2s ease; -ms-transition: all 0.2s ease; -o-transition: all 0.2s ease; transition: all 0.2s ease; }
@@ -629,12 +625,6 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
   #heading .bar:after { border-left-width: 1em; }
   #heading .cerchez-slider .slider .item .caption { bottom: 1em; }
   #heading .cerchez-slider .slider .item .caption span.text:after { border-left-width: 1em; border-right-width: 1em; border-top-width: 1em; bottom: -0.95em; margin-left: -1em; } }
-@media (min-width: 1024px) { #header #menu li a { padding: 0.75em 1.5em; }
-  #header #menu li.menu-item-has-children ul a, #header #menu li.page_item_has_children ul a { padding: 0.6em 1.5em; }
-  #header #menu li.menu-item-has-children ul li:last-child a, #header #menu li.page_item_has_children ul li:last-child a { padding-bottom: 1.5em; }
-  #header #menu li.mini-menu-cart ul a { padding: 0.75em 1.25em 0.75em 0.75em; }
-  #header #menu li.mini-menu-cart ul li:last-child a { padding-bottom: 0.75em; }
-  #heading .cerchez-slider .slider .item .caption span.text { font-size: 1.5em; } }
 /** Side menu
 */
 #sidemenu .title { width: 240px; margin: 0 10px 10px 10px; }
@@ -681,8 +671,8 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
 .post .post-header h3 { color: #cd1619; text-transform: uppercase; font-size: 35px; text-align: center; }
 .post .post-header .numwrapper { position: relative; width: 95%; margin: 0 auto; }
 .post .post-header .numwrapper .curlholder { width: 300px; margin: 0 auto; }
-.post .post-header .numwrapper .chnum { color: #cd1619; position: absolute; top: 23%; left: 48%; text-align: center; font-size: 50px; }
-.post .post-header .numwrapper .zerobig { top: 24%; left: 46%; }
+.post .post-header .numwrapper .chnum { width: 100px; color: #cd1619; position: absolute; top: 23%; left: 43%; text-align: center; font-size: 50px; }
+.post .post-header .numwrapper .zerobig { top: 23%; left: 43%; }
 .post .post-header .numwrapper .zerobig img { width: 50px; }
 .post .post-header .curlholder { width: 330px; margin: 0 auto; }
 .post .post-title { font-size: 8vw; margin-bottom: 0; letter-spacing: -1px; line-height: 1; color: #cd1619; text-align: center; text-transform: uppercase; }
@@ -707,12 +697,12 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
   .post .post-title { font-size: 7.5vw; padding: 20px 0; }
   .post .post-header { padding: 20px 0 0 0; }
   .post .post-header h3 { font-size: 20px; padding: 10px 0; }
-  .post .post-header .numwrapper .chnum { top: 25%; left: 46.5%; font-size: 40px; }
+  .post .post-header .numwrapper .chnum { top: 25%; left: 42%; font-size: 40px; width: 100px; }
   .post .post-header .numwrapper .chnum img { width: 80px; }
-  .post .post-header .numwrapper .zerobig { top: 21%; left: 46%; }
+  .post .post-header .numwrapper .zerobig { top: 21%; left: 40%; }
   .post .post-header .numwrapper .zerobig img { width: 40px; } }
-@media screen and (max-width: 600px) { .post .post-header .numwrapper .chnum { top: 27%; left: 47.5%; font-size: 20px; }
-  .post .post-header .numwrapper .zerobig { top: 21%; left: 46%; }
+@media screen and (max-width: 600px) { .post .post-header .numwrapper .chnum { width: 100px; top: 27%; left: 35%; font-size: 20px; }
+  .post .post-header .numwrapper .zerobig { top: 21%; left: 35%; }
   .post .post-header .numwrapper .zerobig img { width: 30px; } }
 
 /** Browse Chapters at bottom of posts
@@ -758,23 +748,30 @@ ul { list-style: url("../img/curls-list-2.png"); padding: 0 0 0 10px; }
   .fullbook .col-sm-6 p { padding-top: 10px; } }
 
 /* isotope filter */
+.filter-group { font-size: 25px; }
 .filter-group ul { margin: 10px 0 15px 0; padding: 20px 0; border-bottom: 3px solid #1B1E1F; }
 .filter-group ul li { display: inline-block; list-style-type: none; cursor: pointer; font-size: 25px; }
 .filter-group ul li:hover { color: #cd1619; }
 .filter-group .active { color: #cd1619; }
-@media screen and (max-width: 850px) { .filter-group ul li { font-size: 22px; } }
-@media screen and (max-width: 600px) { .filter-group ul { padding: 10px 0; }
+@media screen and (max-width: 850px) { .filter-group { font-size: 22px; }
+  .filter-group ul li { font-size: 22px; } }
+@media screen and (max-width: 600px) { .filter-group { font-size: 18px; }
+  .filter-group ul { padding: 10px 0; }
   .filter-group ul li { font-size: 18px; } }
 
 .grid .grid-item { width: 30%; height: 450px; padding: 5px 10px 30px 10px; margin: 0 10px; }
+.grid .grid-item .overlay { z-index: 1000; position: absolute; left: 20%; top: 20%; }
+.grid .grid-item .overlay h3 { font-family: "trattatelloregular", Georgia, Times, serif; font-size: 80px; line-height: 1em; text-transform: capitalize; padding: 30px 10px; color: #cd1619; border-radius: 50px; background-color: rgba(250, 250, 250, 0.8); }
 .grid .grid-item img { max-height: 400px; padding: 10px 0; }
 .grid .grid-item a h6 { text-transform: uppercase; color: #1B1E1F; width: 100px; font-size: 20px; float: left; padding: 0 25px 0 0; }
 .grid .grid-item a h6:hover { color: #cd1619; text-decoration: none; }
 .grid .grid-item a h6.download { color: #cd1619; }
 .grid .grid-item a h6.download:hover { color: #1B1E1F; }
-@media screen and (max-width: 850px) { .grid .grid-item { max-height: 450px; }
+@media screen and (max-width: 850px) { .grid .grid-item { max-height: 400px; }
+  .grid .grid-item img { max-height: 360px; }
   .grid .grid-item a h6 { font-size: 18px; } }
 @media screen and (max-width: 850px) and (orientation: landscape) { .grid .grid-item { max-height: 320px; }
+  .grid .grid-item img { max-height: 300px; }
   .grid .grid-item a h6 { font-size: 12px; width: 40px; } }
 @media screen and (max-width: 600px) and (orientation: portrait) { .grid .grid-item { max-height: 200px; }
   .grid .grid-item a h6 { font-size: 12px; width: 40px; } }
