--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   
+  <link rel="shortcut icon" href="{{ "/assets/img/RD-favicon.png" | prepend: site.baseurl }}" />
   <link rel="stylesheet" type="text/css" href="{{ "/assets/css/font/stylesheet.css" | prepend: site.baseurl }}" />
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
 
